service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lbtest
  labels:
    app: lbtest
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30302
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: lbtest
