ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lbtest
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: lbtest
          servicePort: 80
